# gks-starter-kit-hands-on-tutorial

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  gks-hands-on-tutorial-implementation-plan.md  pyproject.toml  requirements-colab.txt
.github/workflows/: data-integrity.yml  test.yml
data/: README.md  manifest.yaml
data/expected/: README.md  clinvar-profile-bundle.json
data/gks/clinvar/: README.md  SCV005093950.2-S-ONCO.profile.json  VCV000012582.67-vrs.jsonl
data/native/clinvar/: README.md  VCV000012582.67-esummary.json  VCV000044991.8-esummary.json
data/native/literature/: README.md  (+1 more)
docs/: architecture.md  clinvar-fixture-selection.md  data-provenance.md  limitations.md  project-handoff.md  starter-kit-integration.md  tutorial-authoring.md
notebooks/: 00_start_here.ipynb  00_start_here.py  01_clinvar_native_and_gks.ipynb  01_clinvar_native_and_gks.py  literature_to_gks_discovery.ipynb  literature_to_gks_discovery.py
scripts/: build_expected_clinvar_bundle.py  execute_notebooks.py  generate_colab_requirements.py  refresh_clinvar_gks_profile_fixture.py  refresh_clinvar_gks_vrs_fixture.py  refresh_clinvar_native_fixture.py  refresh_pubmed_native_fixture.py  verify_data.py
src/gks_tutorial/: __init__.py  bundles.py  clinvar.py  discovery.py  environment.py  gks_models.py  io.py  manifests.py
tests/: test_clinvar.py  test_clinvar_gks.py  test_data_manifest.py  test_discovery.py  test_environment.py  test_gks_models.py  test_io.py
(+1 files in other folders)
